/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2011-02-20 16:05 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  + source/ct
  + source/cgi
  + source/misc
  + source/odbc
  + source/tip
  - contrib/ct
  - contrib/cgi
  - contrib/misc
  - contrib/odbc
  - contrib/tip
    ! previous reclassification was considered wrong, hence restored.

  * winmake/common.mak
  * winmake/compile.mak
    ! reinstate core libraries

2011-02-17 23:10 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/misc/stringsx.c
  * contrib/misc/strfmt.c
    ! casting

  * contrib/misc/num.c
    - deffed-out FLOOR function, it is defined in mathx.c

  * winmake/common.mak
  * winmake/compile.mak
    + added object file dependencies for files moved from tests/misc

2011-02-17 21:47 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  - tests/misc
  + contrib/misc/date.c
  + contrib/misc/dates2.c
  + contrib/misc/dbf.c
  + contrib/misc/environ.c
  + contrib/misc/fileread.prg
  + contrib/misc/gauge.c
  + contrib/misc/mathx.c
  + contrib/misc/nconvert.prg
  + contrib/misc/num.c
  + contrib/misc/numtxten.prg
  + contrib/misc/numtxthu.prg
  + contrib/misc/stack.c
  + contrib/misc/status.c
  + contrib/misc/strfmt.c
  + contrib/misc/stringp.prg
  + contrib/misc/stringsx.c
  + contrib/misc/time.c
  + contrib/misc/twirler.prg
    ! move tests/misc/*.* to contrib/misc

2011-02-17 19:08 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * contrib/odbc/odbc.c
    ! fixed to compile under DigitalMars

2011-02-17 09:40 Luiz Rafael Culik <luiz at xharbour.com.br>
   ! contrib/tipssl/mail.prg
     contrib/tipssl/sendmail.prg
     ! fixed email attachment
      
2011-02-17 18:30 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  - CVSROOT
    ! remove garbage directory

2011-02-17 18:18 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  - source/ct