@@ -1,0 +1,14 @@
+#
+# $Id$
+#
+
+ROOT = ../../
+
+C_SOURCES=\
+	hb_f.c \
+	
+PRG_SOURCES=\
+
+LIBNAME=misc
+
+include $(TOP)$(ROOT)config/lib.cf
